--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@types/react": "^16.9.11",
+    "bootstrap": "^4.3.1",
     "originate-react-component": "^0.1.3",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
